🚀 Release v1.0.0 – Simplified Chrome Extension with Manual Barcode Input
- **Removed Rust dependencies** to make the extension fully self-contained
- **Eliminated clipboard listener** due to Chrome restrictions
- **Added a manual barcode input system** in the popup
  - New **input field** (`Barkod giriniz`) for barcode entry
  - New **"Ara" button** to trigger barcode search
- **Updated background script** to handle barcode searches
- **Refactored Depo classes** to include a `searchBarcode()` method
- **Updated UI elements to Turkish** for better user experience

🔹 **Depo Scraper is now a pure Chrome extension!** 🚀

--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <title>Depo Scraper</title>
+    <meta charset="UTF-8">
+    <title>Depo Scraper</title>
 </head>
 <body>
-  <button id="openWebsitesBtn">Depoları Aç</button>
-  
-  <script src="popup.js"></script>
+    <input type="text" id="barcodeInput" placeholder="Barkod giriniz">
+    <button id="searchBtn">Ara</button>
+    <button id="openWebsitesBtn">Depoları Aç</button>
+
+    <script src="popup.js"></script>
 </body>
 </html>
